# mpq-rust

./: .travis.yml  Cargo.toml  README.md
.github/workflows/: ci.yaml
src/: archive.rs  chain.rs  compression.rs  crypt.rs  lib.rs  main.rs
