[package]
name = "mpq"
version = "0.2.0"
authors = ["Michael Sierks <msierks117@gmail.com>"]
license = "MIT/Apache-2.0"
description = "A library for reading MPQ archives"
documentation = "https://docs.rs/mpq"
repository = "https://github.com/msierks/mpq-rust"
readme = "README.md"
keywords = ["mpq", "archive"]
include = ["src/*", "Cargo.toml", "LICENSE", "README.md"]

[[bin]]
name = "mpq"
doc = false

[dependencies]
byteorder = "0.5"
bzip2 = "0.3"
flate2 = "0.2"
getopts = "0.2"
