[package]
name = "mpq"
version = "0.8.0"
authors = ["Michael Sierks <msierks117@gmail.com>"]
license = "MIT/Apache-2.0"
description = "A library for reading MPQ archives"
documentation = "https://docs.rs/mpq"
repository = "https://github.com/msierks/mpq-rust"
readme = "README.md"
keywords = ["mpq", "archive"]
include = ["src/*", "Cargo.toml", "LICENSE", "README.md"]
edition = "2018"

[[bin]]
name = "mpq"
doc = false

[dependencies]
adler32 = "1.0"
byteorder = "1.0"
bzip2-rs = "0.1.2"
flate2 = "1.0.27"
getopts = "0.2"
implode = "0.1"
